Updated Sunday Morning Simulator contente and added relevant images

--- a/work/sunday-morning.html
+++ b/work/sunday-morning.html
@@ -52,8 +52,8 @@
 			</div>
 		</div> <!-- title section -->
 
-		<div class="row">
-			<div class="col-lg-4">
+		<div class="row full-row">
+			<div class="col-lg-4 no-side-padding">
 				<h2>team</h2>
 				<p>Individual project</p>
 			</div>
@@ -68,8 +68,8 @@
 		<!-- close project summary -->
 		</div>
 
-		<div class="row">
-			<div class="col-lg-6">
+		<div class="row full-row">
+			<div class="col-lg-6 no-side-padding">
 				<h2>brief</h2>
 				<p>Design and code an interactive simulator using Java. A final course project for Multimedia Programming for Art and Design course (IAT 265). Fall 2016.</p>
 			</div>
@@ -82,7 +82,7 @@
 			</div>
 			<div class="col-lg-6">
 				<figure>
-					<img src="#" alt="alt statement to go here">
+					<img src="../img/sundayCode.png" alt="screenshot of application code in Eclipse">
 					<figcaption>
 						[caption to go here]
 					</figcaption>
@@ -90,18 +90,13 @@
 			</div>
 		</div>
 
-		<div class="row">
-			<div class="col-lg-6">
+		<div class="row full-row">
+			<div class="col-lg-6 no-side-padding">
 				<h2>preview</h2>
-				<p>A screen recording of my program, running through Eclipse.</p>
+				<p>A screen recording of Sunday Morning Simulator in window video, running through Eclipse. Recorded on my personal laptop.</p>
 			</div>
-			<div class="col-lg-6">
-				<figure>
-					<img src="#" alt="alt statement to go here">
-					<figcaption>
-						[caption to go here]
-					</figcaption>
-				</figure>
+			<div class="col-lg-6 embed-responsive embed-responsive-16by9">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/Q1RgJm5i08Q?rel=0&amp;controls=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</div>
 		</div>
 
@@ -112,7 +107,7 @@
 			</div>
 			<div class="col-lg-6">
 				<figure>
-					<img src="#" alt="alt statement to go here">
+					<img src="../img/sunday-storyboards.jpeg" alt="Photograph of storyboards made for this application. Drawn in blue felt pen.">
 					<figcaption>
 						[caption to go here]
 					</figcaption>
@@ -127,7 +122,7 @@
 			</div>
 			<div class="col-lg-6">
 				<figure>
-					<img src="#" alt="alt statement to go here">
+					<img src="../img/sunday-UML-cropped.png" alt="Cropped image of the app's UML diagram">
 					<figcaption>
 						[caption to go here]
 					</figcaption>
@@ -141,7 +136,7 @@
 			</div>
 			<div class="col-lg-6">
 				<figure>
-					<img src="#" alt="alt statement to go here">
+					<img src="../img/projectAssets.png" alt="alt statement to go here">
 					<figcaption>
 						[caption to go here]
 					</figcaption>
@@ -156,7 +151,7 @@
 			</div>
 			<div class="col-lg-6">
 				<figure>
-					<img src="#" alt="alt statement to go here">
+					<img src="../img/sundayMorningSim_toast.png" alt="image of the application on the 'toast' stage">
 					<figcaption>
 						[caption to go here]
 					</figcaption>
@@ -183,7 +178,7 @@
 			</div>
 		</div>
 	</footer> <!-- footer -->
-    
+
   	<script src="../js/jquery.slim.min.js"></script>
   	<script src="../js/popper.min.js"></script>
   	<script src="../js/bootstrap.min.js"></script>
