--- a/work/studious-chef.html
+++ b/work/studious-chef.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
 </head>
 <body>
-	<nav class="navbar navbar-light bg-white navbar-expand-sm" id="navbar-bg">
+	<nav class="navigation navbar navbar-light bg-white navbar-expand-sm" id="navbar-bg">
 		<div class="container-fluid">
 			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navLogo">
 				<img id="tw-icon" src="../img/icon.png" alt="Taylor Wilkinson portfolio icon">
@@ -79,7 +79,7 @@
 			</div>
 			<div class="col-lg-6">
 				<pre>
-					<code>					
+					<code>
 &lt;body&gt;
   &lt;!-- Navigation Bar --&gt;
   &lt;?php require_once("required/nav_bar.php"); ?&gt;
@@ -249,7 +249,7 @@ mbr;
 			</div>
 		</div>
 	</footer> <!-- footer -->
-    
+
   	<script src="../js/jquery.slim.min.js"></script>
   	<script src="../js/popper.min.js"></script>
   	<script src="../js/bootstrap.min.js"></script>
