--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
 </head>
 <body>
-	<nav class="navbar navbar-light bg-white navbar-expand-sm" id="navbar-bg">
+	<nav class="navigation navbar navbar-light bg-white navbar-expand-sm" id="navbar-bg">
 		<div class="container-fluid">
 			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navLogo">
 				<img id="tw-icon" src="img/icon.png" alt="Taylor Wilkinson portfolio icon">
@@ -63,7 +63,7 @@
 			</div>
 		</div> <!-- end the first summary row -->
 
-		
+
     </div><!-- landing page content TBD -->
 
   	<script src="js/jquery.slim.min.js"></script>
