--- a/work/retrofit-your-home.html
+++ b/work/retrofit-your-home.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
 </head>
 <body>
-	<nav class="navbar navbar-light bg-white navbar-expand-sm" id="navbar-bg">
+	<nav class="navigation navbar navbar-light bg-white navbar-expand-sm" id="navbar-bg">
 		<div class="container-fluid">
 			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navLogo">
 				<img id="tw-icon" src="../img/icon.png" alt="Taylor Wilkinson portfolio icon">
@@ -114,7 +114,7 @@
             		&lt;/div&gt;
             	&lt;/div&gt;
             &lt;/div&gt;
-            &lt;/section&gt;			
+            &lt;/section&gt;
 					</code>
 				</pre>
 				<p class="snippet">Code snippet of code from Retrofit Your Home's "Enviornment" secondary navigation</p>
@@ -184,7 +184,7 @@
 			</div>
 		</div>
 	</footer> <!-- footer -->
-    
+
   	<script src="../js/jquery.slim.min.js"></script>
   	<script src="../js/popper.min.js"></script>
   	<script src="../js/bootstrap.min.js"></script>
