--- a/work/sprout.html
+++ b/work/sprout.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
 </head>
 <body>
-	<nav class="navbar navbar-light bg-white navbar-expand-sm" id="navbar-bg">
+	<nav class="navigation navbar navbar-light bg-white navbar-expand-sm" id="navbar-bg">
 		<div class="container-fluid">
 			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navLogo">
 				<img id="tw-icon" src="../img/icon.png" alt="Taylor Wilkinson portfolio icon">
@@ -55,11 +55,11 @@
 		<div class="row">
 			<div class="col-lg-4">
 				<h2>team</h2>
-				<p>Individual project</p>
+				<p>Sherry Wang, Taylor Wilkinson</p>
 			</div>
 			<div class="col-lg-4">
 				<h2>tools</h2>
-				<p>XAMPP, MySQL, PHP, HTML, CSS, AJAX</p>
+				<p>HTML5, CSS3</p>
 			</div>
 			<div class="col-lg-4">
 				<h2>my role</h2>
@@ -74,6 +74,7 @@
 			</div>
 		</div>
 	</div>
+	http://www.sfu.ca/~tjwilkin/IAT%20339/P02/Final%20Week/
 	<!-- landing page content TBD -->
 
 	<footer class="footer" id="portfolio-footer">
@@ -91,7 +92,7 @@
 			</div>
 		</div>
 	</footer> <!-- footer -->
-    
+
   	<script src="js/jquery.slim.min.js"></script>
   	<script src="js/popper.min.js"></script>
   	<script src="js/bootstrap.min.js"></script>
