Updated project icons. Duplicate project page to experiment with subnav

--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,6 @@
 		</div>
 	</div> <!-- filters -->
 
-
 	<div class="container">
 		<!-- Form Validator -->
 		<div id ="prj-container-1" class="project-preview col-sm-12 col-md-6 col-lg-3 filter web">
@@ -81,16 +80,16 @@
 			</a>
 		</div>
 		<!-- IAT 339 Portfolio -->
-		<div id ="prj-container-4" class="project-preview col-sm-12 col-md-6 col-lg-3 filter web">
+		<!-- <div id ="prj-container-4" class="project-preview col-sm-12 col-md-6 col-lg-3 filter web">
 			<a href="work/first-portfolio.html">
 				<img src="img/iconPortfolio.png" alt="placeholder square" class="project-icon">
 				<h3 id="proj-header-4">First Coded Portfolio</h3>
 			</a>
-		</div>
+		</div> -->
 		<!-- Helping Hand -->
 		<div id ="prj-container-5" class="project-preview col-sm-12 col-md-6 col-lg-3 filter java">
 			<a href="work/helping-hand.html">
-				<img src="img/iconHelpingHand.jpeg" alt="placeholder square" class="project-icon">
+				<img src="img/iconHelpingHand.png" alt="placeholder square" class="project-icon">
 				<h3 id="proj-header-5">Helping Hand</h3>
 			</a>
 		</div>
@@ -113,6 +112,13 @@
 			<a href="work/sunday-morning.html">
 				<img src="img/iconSunday.png" alt="placeholder square" class="project-icon">
 				<h3 id="proj-header-8">Sunday Morning Simulator</h3>
+			</a>
+		</div>
+		<!-- Retrofit Your Home -->
+		<div id ="prj-container-4" class="project-preview col-sm-12 col-md-6 col-lg-3 filter web">
+			<a href="work/retrofit-your-home.html">
+				<img src="img/iconRetrofit.png" alt="placeholder square" class="project-icon">
+				<h3 id="proj-header-4">Retrofit Your Home</h3>
 			</a>
 		</div>
 	</div> <!-- project previews -->
